<resources>
    <string name="app_name">Eco-Assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_deposit">Deposit</string>
    <string name="menu_products">Products</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_video">Video</string>
    <string name="menu_settings">Settings</string>

    <string name="hint_nazwa_produktu">Nazwa produktu</string>
    <string name="hint_cena_produktu">Cena produktu</string>
    <string name="hint_data_waznosci_produktu">Data ważności (yyyy-mm-dd)</string>
    <string name="hint_kategoria_produktu">Kategoria produktu</string>
    <string name="hint_opis_produktu">Opis produktu</string>
    <string name="hint_sklep">Sklep</string>
    <string name="hint_purchase_date">Data zakupu</string>

    <string name="text_zapisz">Zapisz</string>
    <string name="product_price">Cena: %1$.2f zł</string>
    <string name="product_expiry">Ważne do: %1$s</string>

    <string name="product_name_label">Nazwa produktu</string>
    <string name="price_label">Cena: %1$.2f zł</string>
    <string name="expiry_label">Data ważności: %1$s</string>
    <string name="category_label">Kategoria: %1$s</string>
    <string name="description_label">Opis: %1$s</string>
    <string name="store_label">Sklep: %1$s</string>
    <string name="purchase_date_label">Data zakupu: %1$s</string>
    <string name="duplicate_label">Duplicate</string>
    <string name="used_label">Status: %1$s</string>
    <string name="used_label_yes">Zużyty</string>
    <string name="used_label_no">Aktywny</string>

    <string name="import_CSV_label">Import CSV</string>
    <string name="export_CSV_label">Eksport CSV</string>
    <string name="import_JSON_label">Import JSON</string>
    <string name="export_JSON_label">Eksport JSON</string>

    <string name="all_title">Wszystkie</string>
    <string name="active_title">Aktywne</string>
    <string name="used_title">Zużyte</string>


    <string name="tooltip_sort_by_price">Sort by Price</string>
    <string name="tooltip_switch_to_grid">View</string>
    <string name="tooltip_add_product">Add Product</string>
    <string name="tooltip_filter_by_value">Filter by Value</string>

    <string name="products_count">Products: %1$d</string>

    <string name="edit_label">Edytuj produkt</string>
    <string name="delete_label">Usuń produkt</string>

    <string-array name="deposit_types">
        <item>Butelka plastikowa</item>
        <item>Butelka szklana</item>
        <item>Puszka aluminiowa</item>
        <item>Słoik</item>
        <item>Karton</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>