<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_toggle_layout"
        android:title="@string/tooltip_switch_to_grid"
        android:icon="@drawable/ic_grid"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_sort_price"
        android:title="@string/tooltip_sort_by_price"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter_all"
        android:title="@string/all_title" />


    <item
        android:id="@+id/action_filter_active"
        android:title="@string/active_title" />

    <item
        android:id="@+id/action_filter_used"
        android:title="@string/used_title" />

</menu>
