<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name_label"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_label" />

        <TextView
            android:id="@+id/tvExpiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expiry_label" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_label" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_label" />

        <TextView
            android:id="@+id/tvStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_label" />

        <TextView
            android:id="@+id/tvPurchaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchase_date_label" />
    </LinearLayout>
</ScrollView>