<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_deposit">

    <fragment
        android:id="@+id/nav_deposit"
        android:name="com.example.lab1.ui.deposit.DepositFragment"
        android:label="@string/menu_deposit"
        tools:layout="@layout/fragment_deposit">

        <action
            android:id="@+id/action_deposit_to_addDeposit"
            app:destination="@id/addDepositFragment"/>
    </fragment>

    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.lab1.ui.products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products">
        <action
            android:id="@+id/action_products_to_addProduct"
            app:destination="@id/addProductFragment" />
        <action
            android:id="@+id/action_products_to_productDetails"
            app:destination="@id/productDetailsFragment" />
        <action
            android:id="@+id/action_products_to_editProduct"
            app:destination="@id/editProductFragment" />
    </fragment>

    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.example.lab1.ui.products.AddProductFragment"
        android:label="Dodaj produkt" />

    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.example.lab1.ui.products.ProductDetailsFragment"
        android:label="Szczegóły produktu" />

    <fragment
        android:id="@+id/editProductFragment"
        android:name="com.example.lab1.ui.products.EditProductFragment"
        android:label="Edytuj produkt"
        tools:layout="@layout/fragment_add_product" />

    <fragment
        android:id="@+id/addDepositFragment"
        android:name="com.example.lab1.ui.deposit.AddDepositFragment"
        android:label="Dodaj opakowanie"
        tools:layout="@layout/fragment_add_deposit" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.example.lab1.ui.reports.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.example.lab1.ui.video.VideoListFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video_list" />
    <action
        android:id="@+id/action_videoList_to_player"
        app:destination="@id/videoPlayerFragment"/>

    <fragment
        android:id="@+id/videoPlayerFragment"
        android:name="com.example.lab1.ui.video.VideoPlayerFragment"
        android:label="Odtwarzacz"
        tools:layout="@layout/fragment_video_player"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.lab1.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>